tests/snapshots/transactions__postcard-MemoryDB Single Storage rolled back.snap
---
source: tests/transactions.rs
expression: "db.try_read_storage::<TestRecord>(&db_file_path)?"
---
TestRecord {
    id: 1,
    data: "My data of 1",
}
