tests/snapshots/transactions__postcard-TransactionDB Single Storage transaction read before.snap
---
source: tests/transactions.rs
expression: "tx.try_read_storage_before::<TestRecord>(&tx_file_path)?"
---
TestRecord {
    id: 1,
    data: "My data of 1",
}
