tests/snapshots/transactions__postcard-TransactionDB Storage transaction backup.snap
---
source: tests/transactions.rs
expression: "tx.try_read_storage::<Vec<TestRecord>>(backup_path)?"
---
[
    TestRecord {
        id: 1,
        data: "My data of 1",
    },
    TestRecord {
        id: 2,
        data: "My data of 2",
    },
]
