tests/snapshots/transactions__postcard-TransactionDB Storage transaction initialized.snap
---
source: tests/transactions.rs
expression: "tx.try_read_storage::<Vec<TestRecord>>(&tx_file_path)?"
---
[]
