tests/snapshots/transactions__postcard-TransactionDB transaction get all before.snap
---
source: tests/transactions.rs
expression: "tx.get_all_before::<TestRecordPartitioned>()?"
---
[]
